# Damping-Map-KUKA

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Binaries/: CMakeLists.txt
Binaries/AdmittanceControl/: CMakeLists.txt
Binaries/AdmittanceControl/src/: AdmittanceControl.cpp  PositionControlClient.cpp
Binaries/DampingMap/: CMakeLists.txt
Binaries/DampingMap/src/: KukaDampingMap.cpp
Binaries/LBRClientTemplate/: CMakeLists.txt
Binaries/LBRClientTemplate/include/LBRClientTemplate/: MyLBRClient.h
Binaries/LBRClientTemplate/src/: MyLBRApp.cpp  MyLBRClient.cpp
Binaries/LBRJointSineOverlay/: CMakeLists.txt
Binaries/LBRJointSineOverlay/include/LBRJointSineOverlay/: LBRJointSineOverlayClient.h
Binaries/LBRJointSineOverlay/src/: LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.cpp
Binaries/LBRTorqueSineOverlay/: CMakeLists.txt
Binaries/LBRTorqueSineOverlay/include/LBRTorqueSineOverlay/: LBRTorqueSineOverlayClient.h
Binaries/LBRTorqueSineOverlay/src/: LBRTorqueSineOverlayApp.cpp  LBRTorqueSineOverlayClient.cpp
Binaries/LBRWrenchSineOverlay/: CMakeLists.txt
Binaries/LBRWrenchSineOverlay/include/LBRWrenchSineOverlay/: LBRWrenchSineOverlayClient.h
Binaries/LBRWrenchSineOverlay/src/: LBRWrenchSineOverlayApp.cpp  LBRWrenchSineOverlayClient.cpp
Binaries/PositionControl/: CMakeLists.txt  PositionControlApp.cpp  PositionControlApp2.cpp  PositionControlClient.cpp  PositionControlClient.h
Binaries/PositionControl/src/: Ad.cpp  Ad_pert_wholetrial_2.cpp  AdmittanceControl_GUI.cpp  AdmittanceControl_test_mine.cpp  Hybrid.cpp  Perturb.cpp  Perturbation.cpp  PositionControlApp.cpp  PositionControlApp2.cpp  PositionControlApp_Ad.cpp  PositionControlApp_ex.cpp  PositionControlApp_out.cpp  run_udp_server.cpp
Binaries/PositionControl2/: Ad.cpp  Perturb.cpp  PositionControlApp_Ad.cpp  PositionControlApp_out.cpp
Binaries/RunTrignoEmgClient/: CMakeLists.txt
Binaries/RunTrignoEmgClient/src/: TrignoEmgClient.cpp  main.cpp
Binaries/VariableDampingControl/: CMakeLists.txt  KukaVariableDamping.cpp  TrignoEmgClient.h
Binaries/VariableDampingControl/MVC/: MVC_Emg.cpp
Binaries/VariableDampingControl/src/: KukaVariableDamping.cpp  SubjectMetadataParser.cpp
FRI-Client-SDK_Cpp/example/AdmittanceControl/: Makefile
FRI-Client-SDK_Cpp/example/Damping_Map/: KukaDampingMap.cpp  Makefile
FRI-Client-SDK_Cpp/example/LBRJointSineOverlay/: LBRJointSineOverlayApp.cpp
FRI-Client-SDK_Cpp/example/PositionControl2/: Ad_pert_wholetrial_2.cpp  AdmitanceControl_GUI.cpp  AdmitanceControl_test_mine.cpp  Display.m  Hybrid.cpp  Perturbation.cpp  PositionControl  PositionControlApp.cpp  PositionControlApp.cpp~  PositionControlApp_ex.cpp  PositionControlClient.cpp~  TrajectoryFileiiwa_.txt  backup~  run_udp_server_main.cpp
FRI-Client-SDK_Cpp/example/VariableDamping/: Makefile  VariableDamping.cpp
FRI-Client-SDK_Cpp/example/VariableDampingControl/: EmgClient.cpp  H5FunctionsNMCHRL.h  KukaVariableDamping.cpp  KukaVariableDampingApp.cpp  MVC_Emg.cpp  Makefile  PositionControlClient.cpp  SubjectMetadataParser.cpp  SubjectMetadataParser.h  TcpDisconnectTest.cpp  TrignoEmgClient.cpp  TrignoEmgClient.h  subject_metadata_testfile.txt
FRI-Client-SDK_Cpp/example/VariableDampingControl/MVC/: MVC_Emg.cpp  Makefile
Libraries/: CMakeLists.txt
Libraries/fri_client/: CMakeLists.txt
Libraries/hdf5_practice/: DataSet2D.h  create.cpp  h5_extend.cpp  h5_practice.cpp  h5_twobuffer.cpp  practice.cpp
Libraries/position_control_client/: CMakeLists.txt
Libraries/position_control_client/include/PositionControlClient/: PositionControlClient.h
Libraries/position_control_client/src/: PositionControlClient.cpp
Libraries/trigno_emg_client/: CMakeLists.txt
Libraries/trigno_emg_client/include/TrignoEmgClient/: TrignoEmgClient.h
Libraries/udp_server/: CMakeLists.txt
Libraries/udp_server/include/UdpServer/: UdpServer.h
Libraries/udp_server/src/: UdpServer.cpp
hdf5_practice/: Makefile  h5_practice  h5_practice.cpp  h5_twobuffer  hdf5_attribute_example.cpp  practice  subject_metadata_test  test.cpp
